--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h3>new code</h3>
     <p>i am coding now</p>
     <p>hello</p>
+    <img src="hero alam.jfif" alt="hero">
     
 </body>
 </html>
